--- a/ADBKT/neo4j-auth.ipynb
+++ b/ADBKT/neo4j-auth.ipynb
@@ -2,13 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GraphDatabase' from 'neo4j' (c:\\Users\\Doushka\\Downloads\\neo4j.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Doushka\\Downloads\\neo4j-auth.ipynb Cell 1\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mneo4j\u001b[39;00m \u001b[39mimport\u001b[39;00m GraphDatabase\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'GraphDatabase' from 'neo4j' (c:\\Users\\Doushka\\Downloads\\neo4j.py)"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "from neo4j import GraphDatabase\n",
-    "import cred_neo4j as c"
+    "from neo4j import GraphDatabase\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GraphDatabase' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Doushka\\Downloads\\neo4j-auth.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W1sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAn error occurred: \u001b[39m\u001b[39m{\u001b[39;00me\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W1sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m driver \u001b[39m=\u001b[39m GraphDatabase\u001b[39m.\u001b[39mdriver(\u001b[39m'\u001b[39m\u001b[39mneo4j://widb005l.f4.htw-berlin.de:7687\u001b[39m\u001b[39m'\u001b[39m, auth\u001b[39m=\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mneo4j\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m<passwort festlegen>\u001b[39m\u001b[39m'\u001b[39m)) \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# Test the connection\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Doushka/Downloads/neo4j-auth.ipynb#W1sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mif\u001b[39;00m test_connection(driver):\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'GraphDatabase' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def test_connection(driver):\n",
+    "    try:\n",
+    "        # Try to open a session\n",
+    "        with driver.session() as session:\n",
+    "            # Run a simple read query to get the server version\n",
+    "            result = session.run(\"RETURN 'Connection Successful' AS message\")\n",
+    "            for record in result:\n",
+    "                # If the query succeeds, print the result\n",
+    "                print(record['message'])\n",
+    "            return True\n",
+    "    except Exception as e:\n",
+    "        # If an error occurs, print the error message\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "        return False\n",
+    "driver = GraphDatabase.driver('neo4j://widb005l.f4.htw-berlin.de:7687', auth=('neo4j', '<passwort festlegen>')) \n",
+    "\n",
+    "\n",
+    "# Test the connection\n",
+    "if test_connection(driver):\n",
+    "    print(\"The connection to the Neo4j database is successful.\")\n",
+    "else:\n",
+    "    print(\"Failed to connect to the Neo4j database.\")"
    ]
   },
   {
@@ -17,25 +70,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = GraphDatabase.driver(c.neo4j_host, auth=(c.neo4j_userid, c.neo4j_password)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def resetDb():\n",
-    "    q1 = \"\"\"\n",
-    "    match (n) detach delete n\n",
-    "    \"\"\"\n",
+    "def resetDb(driver):\n",
+    "    # Query to delete all nodes and relationships\n",
+    "    delete_query = \"MATCH (n) DETACH DELETE n\"\n",
     "    \n",
-    "    q2 = \"\"\"\n",
-    "    create \n",
-    "      // ----------------------------------------\n",
-    "      // Admins, Gruppen, Gruppenstruktur\n",
-    "      // ----------------------------------------\n",
+    "    # Query to create the desired nodes and relationships\n",
+    "    create_query = \"\"\"\n",
+    "    CREATE \n",
     "      (a1:Admin {name: 'a1'}),\n",
     "      (a2:Admin {name: 'a2'}),\n",
     "      (g1:Gruppe {name: 'g1'}),\n",
@@ -45,9 +86,6 @@
     "      (a1)-[:ING]->(g3),\n",
     "      (a2)-[:ING]->(g2),\n",
     "      (a2)-[:ING]->(g3),\n",
-    "      // ----------------------------------------\n",
-    "      // Unternehmen, Unternehmenstrutur\n",
-    "      // ----------------------------------------\n",
     "      (u1:Unternehmen {name: 'u1'}),\n",
     "      (u11:Unternehmen {name: 'u11'}),\n",
     "      (u111:Unternehmen {name: 'u111'}),\n",
@@ -66,10 +104,25 @@
     "      (u121)-[:SUB]->(u12),\n",
     "      (u122)-[:SUB]->(u12)\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    with driver.session() as session:\n",
-    "        session.run(q1)\n",
-    "        session.run(q2)\n",
+    "        # Begin a transaction\n",
+    "        transaction = session.begin_transaction()\n",
+    "        try:\n",
+    "            # Run the delete query within a transaction\n",
+    "            transaction.run(delete_query)\n",
+    "            # Run the create query within a transaction\n",
+    "            transaction.run(create_query)\n",
+    "            # Commit the transaction if both queries succeed\n",
+    "            transaction.commit()\n",
+    "            print(\"Database has been reset successfully.\")\n",
+    "        except Exception as e:\n",
+    "            # Rollback the transaction in case of an error\n",
+    "            transaction.rollback()\n",
+    "            print(f\"An error occurred while resetting the database: {e}\")\n",
+    "        finally:\n",
+    "            # Close the session\n",
+    "            session.close()\n",
     "        \n",
     "def setAuth(gruppe, unternehmen, auth):\n",
     "    query = \"\"\"\n",
@@ -112,7 +165,8 @@
     "                \"Children\": record[\"Children\"]\n",
     "            })\n",
     "        df = pd.DataFrame(data)\n",
-    "        print(df)"
+    "        print(df)\n",
+    "       "
    ]
   },
   {
@@ -208,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
